--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -1,5 +1,27 @@
-<footer class="d-flex flex-row w-100 justify-content-between align-items-center bg-white border-top pt-2 pb-2">
-	<h4 class="d-flex flex-row w-100 justify-content-center align-items-center w-100">
-		Work done by Alfonso and Erick
-	</h4>
+<footer
+  class="
+    main__footer
+    d-flex
+    flex-row
+    w-100
+    justify-content-between
+    align-items-center
+    bg-white
+    border-top
+    pt-2
+    pb-2
+  "
+>
+  <h4
+    class="
+      d-flex
+      flex-row
+      w-100
+      justify-content-center
+      align-items-center
+      w-100
+    "
+  >
+    Work done by Alfonso and Erick
+  </h4>
 </footer>
